--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ env:
   DOCKER_USER: ${{secrets.DOCKER_HUB_USER}}
   DOCKER_PASSWORD: ${{secrets.DOCKER_HUB_TOKEN}}
   DOCKER_REPOSITORY: class-docker-app
-  NODE_IMAGE_TAG: nodejs-app-V2
+  NODE_IMAGE_TAG: nodejs-app-v1
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
   
 jobs:
   
-  build-scan-push:
+  build-scan-protect:
     
     name: Build and Scan Docker Images
     runs-on: ubuntu-latest
@@ -28,8 +28,9 @@ jobs:
       uses: crazy-max/ghaction-container-scan@v3
       with: 
         image: ${{env.DOCKER_USER}}/${{env.DOCKER_REPOSITORY}}:${{env.NODE_IMAGE_TAG}}
+        severity_threshold: CRITICAL
         annotations: true
-
+       
     - name: Push Image to Docker Hub    
       run: |
         docker login -u ${{env.DOCKER_USER}} -p ${{env.DOCKER_PASSWORD}}
