--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,7 +8,11 @@ env:
 on:
   push:
     branches: [ main ]
-  
+
+permissions:
+  actions: read
+  security-events: write
+
 jobs:
   
   build-scan-protect:
@@ -28,8 +32,15 @@ jobs:
       uses: crazy-max/ghaction-container-scan@v3
       with: 
         image: ${{env.DOCKER_USER}}/${{env.DOCKER_REPOSITORY}}:${{env.NODE_IMAGE_TAG}}
-        severity_threshold: CRITICAL
         annotations: true
+        dockerfile: ./Dockerfile
+        severity: CRITICAL
+
+    - name: Upload SARIF file
+      if: ${{ steps.scan.outputs.sarif != '' }}
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: ${{ steps.scan.outputs.sarif }}
        
     - name: Push Image to Docker Hub    
       run: |
